--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,7 @@
 .header {
-    background: #333;
-    height: 88px;
+    background: var(--gray-800);
+    display: flex;
+    justify-content: center;
+    padding: 1.25rem 0;
+
 }
